[tool.poetry]
name = "agenta_backend"
version = "0.2.2"
description = ""
authors = ["Mahmoud Mabrouk <mahmoudmabrouk.mail@gmail.com>"]
readme = "README.md"
packages = [{include = "agenta_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
docker = "^6.1.1"
toml = "^0.10.2"
uvicorn = "^0.22.0"
sqlmodel = "^0.0.8"
motor = "^3.1.2"
python-multipart = "^0.0.6"
backoff = "^2.2.1"
redis = "^4.6.0"
aiodocker = "^0.21.0"
openai = "^0.27.8"
langchain = "^0.0.256"
odmantic = "^0.9.2"
supertokens-python = "^0.15.1"
sendgrid = "^6.10.0"
restrictedpython = { version = "^6.2", python = ">=3.9,<3.12" }
pytest-mock = "^3.11.1"
boto3 = "^1.28.63"
asyncer = "^0.0.2"
anyio = "==3.7.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.34.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
