[tool.poetry]
name = "agenta_backend"
version = "0.33.6"
description = ""
authors = ["Mahmoud Mabrouk <mahmoudmabrouk.mail@gmail.com>"]
readme = "README.md"
packages = [{include = "agenta_backend"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.4"
pydantic = "^2.7.4"
docker = "7.1.0"
toml = "^0.10.2"
uvicorn = "^0.22.0"
motor = "^3.1.2"
python-multipart = "^0.0.18"
backoff = "^2.2.1"
redis = "^4.6.0"
aiodocker = "^0.21.0"
sendgrid = "^6.10.0"
restrictedpython = { version = "^8.0", python = ">=3.9,<3.12" }
pytest-mock = "^3.11.1"
boto3 = "^1.28.63"
asyncer = "^0.0.2"
anyio = "==3.7.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.8.0"}
kubernetes = "^28.1.0"
celery = "^5.3.6"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
beanie = "^1.25.0"
newrelic = "^9.8.0"
aioboto3 = "^12.4.0"
openai = "^1.30.4"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
uuid-utils = "^0.7.0"
sqlalchemy-json = "^0.7.0"
tqdm = "^4.66.6"
alembic = "^1.13.2"
numpy = "1.26.3"
autoevals = "^0.0.83"
supertokens-python = "^0.26.1"
protobuf = "^4.25.4"
litellm ="^1.48.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-asyncio = "^0.21.1"
faker = "^23.2.0"
pexpect = "^4.9.0"
pytest-xdist = "^3.6.1"
pytz = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

