[tool.poetry]
name = "agenta"
version = "0.14.11"
description = "The SDK for agenta is an open-source LLMOps platform."
readme = "README.md"
authors = ["Mahmoud Mabrouk <mahmoud@agenta.ai>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries"
]
homepage = "https://agenta.ai"
repository = "https://github.com/agenta-ai/agenta"
documentation = "https://docs.agenta.ai"
keywords = ["LLMOps", "LLM", "evaluation", "prompt engineering"]

[tool.poetry.dependencies]
python = "^3.9"
docker = ">=6.1.1,<8.0.0"
click = "^8.1.3"
fastapi = ">=0.96.1"
toml = "^0.10.2"
questionary = ">=1.10,<3.0"
ipdb = ">=0.13"
python-dotenv = "^1.0.0"
python-multipart = ">=0.0.6,<0.0.10"
importlib-metadata = ">=6.7,<8.0"
posthog = "^3.1.0"
pydantic = "2.7.1"
httpx = ">=0.24, <0.28"
pymongo = "^4.6.3"
cachetools = "^5.3.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agenta = "agenta.cli.main:cli"
