[tool.poetry]
name = "agenta"
version = "0.27.4a0"
description = "The SDK for agenta is an open-source LLMOps platform."
readme = "README.md"
authors = ["Mahmoud Mabrouk <mahmoud@agenta.ai>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries"
]
homepage = "https://agenta.ai"
repository = "https://github.com/agenta-ai/agenta"
documentation = "https://docs.agenta.ai"
keywords = ["LLMOps", "LLM", "evaluation", "prompt engineering"]

exclude = [
    "agenta/tests/*"
]

[tool.poetry.dependencies]
python = "^3.9"
docker = ">=6.1.1,<8.0.0"
click = "^8.1.3"
fastapi = ">=0.100.0"
toml = "^0.10.2"
questionary = ">=1.10,<3.0"
ipdb = ">=0.13"
python-dotenv = "^1.0.0"
python-multipart = ">=0.0.6,<0.0.10"
importlib-metadata = ">=8.0.0,<9.0"
posthog = "^3.1.0"
pydantic = ">=2"
httpx = ">=0.24, <0.28"
pymongo = "^4.6.3"
cachetools = "^5.3.3"
pyyaml = "^6.0.2"

opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-exporter-otlp = "^1.27.0"
litellm ="^1.48.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
setuptools = "^71.1.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agenta = "agenta.cli.main:cli"
