[project]
name = "api"
version = "0.87.1"
description = "Agenta API"
authors = [
    { name = "Mahmoud Mabrouk", email = "mahmoud@agenta.ai" },
    { name = "Juan Vega", email = "jp@agenta.ai" }
]

[tool.poetry]
package-mode = false # use pyproject.toml as dependency management and not for packaging

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

# Agenta SDK
agenta = ">=0.86.5"

# Core framework dependencies
fastapi = ">=0.129"
pydantic = { version = "^2", extras = ["email"] }
uvicorn = "^0.41"
gunicorn = "^25"
httpx = "^0.28"
structlog = "^25"
python-dotenv = "^1"
python-multipart = "^0.0.22"

# Database dependencies
sqlalchemy = "^2"
sqlalchemy-utils = "^0.42"
sqlalchemy-json = "^0.7"
asyncpg = "^0.31"
alembic = "^1"

# Data processing
orjson = "^3"
jsonschema = "^4"
genson = "^1"
python-jsonpath = "^2"
bson = "^0.5"
uuid-utils = "^0.14"

# caches, channels, streams
taskiq = "^0.12"
taskiq-redis = "^1"
redis = "^7"
cachetools = "^7"

# Integrations & external services
supertokens-python = "^0.31"
openai = "^2"
sendgrid = "^6"
stripe = "^14"
posthog = "^7"
newrelic = "^11"
dnspython = "^2"

# Observability (limited - see comment below)
opentelemetry-proto = "^1"

# BLOCKED BY NEW RELIC INCOMPATIBILITY
# opentelemetry-api = "^1"
# opentelemetry-sdk = "^1"
# opentelemetry-exporter-otlp-proto-http = "^1"
# protobuf = "^5"

[tool.poetry.group.dev.dependencies]
watchdog = { extras = ["watchmedo"], version = "^3" }
pytest = "^8"
pytest-asyncio = "^0.21"
faker = "^23"
pexpect = "^4.9"
pytest-xdist = "^3.6"
pytz = "^2024"
pytest-mock = "^3.11"
click = "^8.1"
