[project]
name = "api"
version = "0.99.9"
description = "Agenta API"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Mahmoud Mabrouk", email = "mahmoud@agenta.ai" },
    { name = "Juan Vega", email = "jp@agenta.ai" },
]
dependencies = [
    "agenta>=0.99.6",
    "fastapi>=0.136,<0.137",
    "pydantic[email]>=2,<3",
    "uvicorn[standard]>=0.46,<0.47",
    "gunicorn>=26,<27",
    "httpx>=0.28,<0.29",
    "structlog>=25,<26",
    "python-dotenv>=1,<2",
    "python-multipart>=0.0.28,<0.0.29",
    "cryptography>=48,<49",
    "sqlalchemy>=2,<3",
    "sqlalchemy-utils>=0.42,<0.43",
    "sqlalchemy-json>=0.7,<0.8",
    "asyncpg>=0.31,<0.32",
    "alembic>=1,<2",
    "orjson>=3,<4",
    "jsonschema>=4,<5",
    "genson>=1,<2",
    "python-jsonpath>=2,<3",
    "uuid-utils>=0.15,<0.16",
    "taskiq>=0.12,<0.13",
    "taskiq-redis>=1,<2",
    "redis>=7,<8",
    "cachetools>=7,<8",
    "supertokens-python>=0.31,<0.32",
    "openai>=2,<3",
    "sendgrid>=6,<7",
    "stripe>=15,<16",
    "posthog>=7,<8",
    "newrelic>=13,<14",
    "dnspython>=2,<3",
    "opentelemetry-proto>=1,<2",
]

[dependency-groups]
dev = [
    "watchdog[watchmedo]>=3,<4",
    "click>=8,<9",
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "pytest-xdist>=3,<4",
    "pytest-mock>=3,<4",
    "pytest-html>=4,<5",
    "fakeredis>=2.34.1,<3",
]

[tool.uv]
package = false

[tool.uv.sources]
agenta = { path = "../sdks/python", editable = true }
