[project]
name = "api"
version = "0.105.1"
description = "Agenta API"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Mahmoud Mabrouk", email = "mahmoud@agenta.ai" },
    { name = "Juan Vega", email = "jp@agenta.ai" },
]
dependencies = [
    "agenta",
    "fastapi>=0.139,<0.140",
    "pydantic[email]>=2,<3",
    "uvicorn[standard]>=0.51,<0.52",
    "gunicorn>=26,<27",
    "httpx>=0.28,<0.29",
    "structlog>=26,<27",
    "python-dotenv>=1,<2",
    "python-multipart>=0.0.32,<0.0.33",
    "cryptography>=49,<50",
    "sqlalchemy>=2,<3",
    "sqlalchemy-utils>=0.42,<0.43",
    "sqlalchemy-json>=0.7,<0.8",
    "asyncpg>=0.31,<0.32",
    "alembic>=1,<2",
    "orjson>=3,<4",
    "jsonschema>=4,<5",
    "genson>=1,<2",
    "python-jsonpath>=2,<3",
    "uuid-utils>=0.17,<0.18",
    "taskiq>=0.12,<0.13",
    "taskiq-redis>=1,<2",
    "redis>=8,<9",
    "cachetools>=7,<8",
    "supertokens-python>=0.31,<0.32",
    "openai>=2,<3",
    "sendgrid>=6,<7",
    "stripe>=15,<16",
    "posthog>=7,<8",
    "newrelic>=13,<14",
    "dnspython>=2,<3",
    "opentelemetry-proto>=1,<2",
    "croniter>=6,<7",
    "miniopy-async>=1,<2",
]

[dependency-groups]
dev = [
    "watchdog[watchmedo]>=3,<4",
    "click>=8,<9",
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "pytest-xdist>=3,<4",
    "pytest-mock>=3,<4",
    "pytest-html>=4,<5",
    "fakeredis>=2.34.1,<3",
    # Starlette 1.2's TestClient prefers httpx2 and warns when only httpx is
    # present. Runtime code stays on httpx (0.28); this test-only dep silences
    # the deprecation without touching the runtime HTTP stack.
    "httpx2>=2.3,<3",
]

[tool.uv]
package = false

[tool.uv.sources]
agenta = { path = "../sdks/python", editable = true }
