[tool.poetry]
name = "agenta"
version = "0.69.5"
description = "The SDK for agenta is an open-source LLMOps platform."
readme = "README.md"
authors = [
    "Mahmoud Mabrouk <mahmoud@agenta.ai>",
    "Juan Vega <jp@agenta.ai>"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries"
]
homepage = "https://agenta.ai"
repository = "https://github.com/agenta-ai/agenta"
documentation = "https://agenta.ai/docs/"
keywords = ["LLMOps", "LLM", "evaluation", "prompt engineering"]

exclude = [
    "agenta/tests/*"
]

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies (always loaded)
pydantic = "^2"
httpx = "^0.28"
structlog = "^25"

# Tracing dependencies (core feature, always loaded)
opentelemetry-api = "^1"
opentelemetry-sdk = "^1"
opentelemetry-instrumentation = "^0.59b0"
opentelemetry-exporter-otlp-proto-http = "^1"

# Lazy-loaded dependencies (imported only when used)
fastapi = ">=0.125"  # Only for serving (@app, @route decorators)
litellm = "^1"  # Only for LLM operations (prompt handlers)
jinja2 = "^3"  # Only for jinja2 templating
pyyaml = "^6"  # Only for YAML config files (ConfigManager.get_from_yaml)
python-jsonpath = "^2"  # Only for JSONPath expressions (try/except wrapped)
openai = "^2"  # Only for OpenAI-specific workflows
restrictedpython = { version = "^8", python = ">=3.11, <3.14" }  # Only for sandboxed code execution
daytona = "^0.125.0"  # Only for Daytona sandbox runner


[tool.poetry.group.dev.dependencies]
posthog = "^7"
questionary = "^2"
pytest = "^9"
setuptools = "^80"
pytest-asyncio = "^1"
mypy = "^1"
pytest-xdist = "^3"
uvicorn = "^0.38"
requests = "^2"
pexpect = "^4"
boto3 = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
