[tool.poetry]
name = "agenta"
version = "0.72.3"
description = "The SDK for agenta is an open-source LLMOps platform."
readme = "README.md"
authors = [
    "Mahmoud Mabrouk <mahmoud@agenta.ai>",
    "Juan Vega <jp@agenta.ai>"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries"
]
homepage = "https://agenta.ai"
repository = "https://github.com/agenta-ai/agenta"
documentation = "https://agenta.ai/docs/"
keywords = ["LLMOps", "LLM", "evaluation", "prompt engineering"]

exclude = [
    "agenta/tests/*"
]

[tool.poetry.dependencies]
python = "^3.11"
#
fastapi = ">=0.125"
pydantic = "^2"
python-dotenv = "^1"
importlib-metadata = "^8"
httpx = "^0.28"
pyyaml = "^6"
toml = "^0.10"
litellm = "^1"
orjson = "^3"
jinja2 = "^3"
python-jsonpath = "^2"
opentelemetry-api = "^1"
opentelemetry-sdk = "^1"
opentelemetry-instrumentation = "^0.59b0"
opentelemetry-exporter-otlp-proto-http ="^1"
structlog = "^25"
restrictedpython =  { version = "^8", python = ">=3.11, <3.14" }
openai = "^2"
daytona = "^0.121.0"


[tool.poetry.group.dev.dependencies]
posthog = "^7"
questionary = "^2"
pytest = "^9"
setuptools = "^80"
pytest-asyncio = "^1"
mypy = "^1"
pytest-xdist = "^3"
uvicorn = "^0.38"
requests = "^2"
pexpect = "^4"
boto3 = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
