[tool.poetry]
name = "services"
version = "0.96.1"
description = "Agenta Services (Chat & Completion)"
authors = [
    "Mahmoud Mabrouk <mahmoud@agenta.ai>",
    "Juan Vega <jp@agenta.ai>"
]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

# Agenta SDK
agenta = ">=0.96.0"

# Server
uvicorn = "^0.44"
gunicorn = "^25"

# Traces, Metrics, Logs
structlog = "^25"
newrelic = "^12"

# LiteLLM providers
boto3 = "^1"
google-cloud-aiplatform = "^1"

# Serialization (required by litellm for OpenAI responses)
orjson = "^3"

[tool.poetry.group.dev.dependencies]
watchdog = { extras = ["watchmedo"], version = "^3" }
requests = "^2"
click = "^8"
pytest = "^8"
pytest-asyncio = "^0.21"
pytest-xdist = "^3"
pytest-mock = "^3"
pytest-html = "^4"
