[project]
name = "services"
version = "0.99.3"
description = "Agenta Services (Chat & Completion)"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Mahmoud Mabrouk", email = "mahmoud@agenta.ai" },
    { name = "Juan Vega", email = "jp@agenta.ai" },
]
dependencies = [
    "agenta>=0.99.2",
    "uvicorn[standard]>=0.46,<0.47",
    "gunicorn>=26,<27",
    "structlog>=25,<26",
    "newrelic>=12,<13",
    "boto3>=1,<2",
    "google-cloud-aiplatform>=1,<2",
    "orjson>=3,<4",
]

[dependency-groups]
dev = [
    "watchdog[watchmedo]>=3,<4",
    "requests>=2,<3",
    "click>=8,<9",
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "pytest-xdist>=3,<4",
    "pytest-mock>=3,<4",
    "pytest-html>=4,<5",
]

[tool.uv]
package = false
