[project]
name = "agenta"
version = "0.99.5"
description = "The SDK for agenta is an open-source LLMOps platform."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Mahmoud Mabrouk", email = "mahmoud@agenta.ai" },
    { name = "Juan Vega", email = "jp@agenta.ai" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
keywords = ["LLMOps", "LLM", "evaluation", "prompt engineering"]
dependencies = [
    "agenta-client",
    "pydantic>=2,<3",
    "httpx>=0.28,<0.29",
    "structlog>=25,<26",
    "opentelemetry-api>=1,<2",
    "opentelemetry-sdk>=1,<2",
    "opentelemetry-instrumentation>=0.62b1,<0.63",
    "opentelemetry-exporter-otlp-proto-http>=1,<2",
    "fastapi>=0.136,<0.137",
    "pyyaml>=6,<7",
    "litellm>=1,<2",
    "openai>=2,<3",
    "jinja2>=3,<4",
    "orjson>=3,<4",
    "python-jsonpath>=2,<3",
    "daytona>=0.172,<0.173",
]

[project.urls]
Homepage = "https://agenta.ai"
Repository = "https://github.com/agenta-ai/agenta"
Documentation = "https://agenta.ai/docs/"

[dependency-groups]
dev = [
    "posthog>=7,<8",
    "questionary>=2,<3",
    "setuptools>=80,<81",
    "uvicorn>=0.38,<0.39",
    "requests>=2,<3",
    "pexpect>=4,<5",
    "boto3>=1,<2",
    "click>=8,<9",
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "pytest-xdist>=3,<4",
    "pytest-mock>=3,<4",
    "pytest-html>=4,<5",
]

[tool.uv.sources]
agenta-client = { path = "../../clients/python", editable = true }

[tool.uv.build-backend]
module-name = "agenta"
module-root = ""
source-exclude = ["agenta/tests/*"]

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"
