[project]
name = "hotel-agent"
version = "0.0.1"
description = "Hotel concierge agent example — backend core (framework-agnostic)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    # Pydantic-AI runtime (vanilla)
    "pydantic-ai-slim[openai,anthropic]>=1.89",
    # Server
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
